--- a/index.html
+++ b/index.html
@@ -30,16 +30,38 @@
     </header>
 
     <section id="sobre">
-
-            <div>
+        <div>
             <img id="imagemSobre" src="./pictures/fotopadaria.JPG" alt="Foto do Empório Leão de Prata">
-            </div>
+        </div>
 
-            <div id="textoSobre">
+        <div id="textoSobre">
             <h1>Empório Leão de Prata</h1><br><br>
             <p>A empresa Empório Leão De Prata, localizada no bairro Vila Eunice, em Jandira-SP foi fundada em 2001. A atividade principal da empresa é Fabricação de Produtos de Padaria e Confeitaria Com Predominância de Produção Própria, alem de fornecer mercadorias em geral.</p>
-            </div>
+        </div>
+    </section>
 
+    <section id="produtos">
+        <div id="principalProduto">
+            <div>
+               <img class="imagemProduto" src="./pictures/bread dough.jpg" alt="Massa de pão">
+            </div>
+            <div>
+                <h2>Principal fornecimento</h2> <br>
+                <p>
+                    Seu principal fornecimento esta relacionado a massas, com conhecimentos que foram adiquiridos em 2001 e aprimorados até os dias de hoje, sendo famosa por seus pães com sabores e aparencia inigualável.
+                </p>
+            </div> 
+        </div>
+
+        <div id="mercadoriaProduto">
+            <div>
+                <img class="imagemProduto" src="./pictures/supermarket.jpg" alt="Corredor de mercadorias">
+            </div>
+            <h2>Mercadorias em geral</h2> <br>
+            <p>
+                Para sua comodidade o Empório Leão de Prata fornece mercadorias em geral, assim é possível comprar diversos itens para um café da manhã ou um almoço em família.
+            </p>
+        </div>
     </section>
 
 </body>
